<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menuBackground"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:fontFamily="@font/montserratbold"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:fontFamily="@font/montserratbold"
        android:id="@+id/name"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:id="@+id/logo">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logo3"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="1:0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintHorizontal_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserratbold"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/ic_baseline_mail_24"
        android:drawablePadding="20dp"
        android:hint="@string/mail"
        android:padding="20dp"
        android:textColorHint="@color/hint_text_color" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/email"
        android:background="@drawable/edit_text_background"
        android:hint="@string/username"
        android:fontFamily="@font/montserratbold"
        android:textColorHint="@color/hint_text_color"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserratbold"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_text_color" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerbtn"
        android:layout_below="@id/password_field"
        android:text="@string/registrati"
        android:textSize="20dp"
        android:fontFamily="@font/montserratbold"
        android:backgroundTint="@color/colorPrimaryVariant"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signout"
        android:text="Login"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorPrimaryVariant"
        android:fontFamily="@font/montserratbold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
    <!--
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activites.SetPasswordActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registrati"
            android:id="@+id/welcome"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:textSize="34sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:text="Name"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="34sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mail"
            android:id="@+id/email"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/name"
            android:textSize="14sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signout"
            android:text="SignOut"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>-->
