<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sfondoHome"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingBottom="16dp"
        android:layout_margin="16dp"
        android:background="@drawable/info_card_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/saluto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="70dp"
            android:text="@string/ciao"
            android:textColor="#ffffff"
            android:fontFamily="@font/montserratbold"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nomeUtente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserratbold"
            android:text="Antonio Tes"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/saluto"
            app:layout_constraintTop_toBottomOf="@+id/saluto" />


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/nomeUtente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/saluto">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avatar"
                android:visibility="visible" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:background="@drawable/buttons_layout"
        android:layout_marginEnd="40dp"
        android:elevation="4dp"
        android:fontFamily="@font/montserratbold"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/sfondoHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sfondoHome">

        <LinearLayout
            android:id="@+id/btnInsegnamenti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:elevation="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/picInsegnamenti"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="8dp"
                app:srcCompat="@drawable/baseline_school_24" />

            <TextView
                android:id="@+id/testoInsegnamenti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/insegnamenti"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAddFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:elevation="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/picCaricafile"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="8dp"
                app:srcCompat="@drawable/baseline_post_add_24" />

            <TextView
                android:id="@+id/testoCaricafile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/caricaFile"
                android:fontFamily="@font/montserratbold"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDIEEI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/picDIEEI"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="8dp"
                app:srcCompat="@drawable/logounict" />

            <TextView
                android:id="@+id/testoDIEEI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/DIEEI"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/cercaDB"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/search_edittext"
        android:drawableEnd="@drawable/ic_baseline_search_24"
        android:drawableTint="@color/white"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/cerca"
        android:inputType="textPersonName"
        android:fontFamily="@font/montserratbold"
        android:paddingStart="20dp"
        android:paddingEnd="4dp"
        android:textSize="16sp"
        android:textColorHint="@color/white"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:elevation="12dp"
        android:background="@drawable/grid_backgroud"
        app:layout_constraintTop_toBottomOf="@+id/cercaDB">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/logo3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="177dp"
            android:layout_height="111dp"
            android:text="@string/loremipsum"
            android:textColor="#ffffff"
            android:fontFamily="@font/montserratbold"
            android:textSize="14sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/banner">

        <!-- TextView per il titolo dei preferiti -->
        <TextView
            android:id="@+id/preferiti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratbold"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/preferiti"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/griglia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/grid_backgroud"
            android:elevation="6dp"
            app:layout_constraintTop_toBottomOf="@+id/preferiti">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/grid_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:elevation="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
